Add missing UIStyle source, update sources, ignore build artifacts
- Add src/main/java/ui/UIStyle.java (referenced by 8 UI classes but missing from repo)
- Sync latest .java source edits from working copy
- Add .gitignore and stop tracking compiled .class files